# Hi-bro

./: .gitignore  CMakeLists.txt  worklog.md
.github/workflows/: build.yml
android/: gradlew
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/eosshooter/: GameActivity.java
assets/models/: ak47.glb  m4a1.glb  pistol.glb  rpg.glb  shotgun.glb  sniper.glb
download/eos-shooter/: .gitignore  CMakeLists.txt  README.md
download/eos-shooter/.github/workflows/: build.yml
download/eos-shooter/android/: build.gradle  settings.gradle
download/eos-shooter/android/app/: build.gradle  proguard-rules.pro
download/eos-shooter/android/app/src/main/: AndroidManifest.xml
download/eos-shooter/android/app/src/main/java/com/eosshooter/: GameActivity.java
download/eos-shooter/scripts/: setup.sh
download/eos-shooter/src/: main.cpp
download/eos-shooter/src/game/: Bullet.cpp  Bullet.h  CameraController.cpp  Enemy.cpp  Game.cpp  Game.h  Map.cpp  Map.h  ParticleSystem.cpp  ParticleSystem.h  Player.cpp  Player.h  Weapon.cpp  Weapon.h
download/eos-shooter/src/multiplayer/: EOSManager.cpp  NetworkManager.cpp  NetworkManager.h
download/eos-shooter/src/utils/: AudioManager.cpp  InputManager.h  Math.h
src/: main.cpp
src/game/: Bullet.h  CameraController.cpp  CameraController.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Map.cpp  Map.h  ModelManager.cpp  ModelManager.h  ParticleSystem.cpp  Player.cpp  Player.h  TextureGenerator.cpp  TextureGenerator.h  Weapon.cpp  Weapon.h
src/multiplayer/: EOSManager.cpp  EOSManager.h
src/utils/: AudioManager.cpp  AudioManager.h  InputManager.cpp
upload/eos-temp/Include/: eos_achievements.h  eos_achievements_types.h  eos_anticheatclient.h  eos_anticheatclient_types.h  eos_auth.h  eos_common.h  eos_connect.h  eos_custominvites.h  eos_ecom.h  eos_ecom_types.h  eos_integratedplatform_types.h  eos_kws_types.h  eos_lobby.h  eos_logging_categories.h  eos_mods.h  eos_playerdatastorage_types.h  eos_presence.h  eos_presence_localized_types.h  eos_presence_types.h  eos_reports_types.h  eos_result.h  eos_rtc_data.h  eos_rtc_types.h  eos_sanctions.h  eos_sessions_types.h  eos_stats.h  eos_stats_types.h  eos_titlestorage.h  eos_ui.h  eos_userinfo.h  eos_version.h
upload/eos-temp/Samples/Android/Login/: build.gradle  settings.gradle
upload/eos-temp/Samples/Android/Login/app/: build.gradle
upload/eos-temp/Samples/Android/Login/app/src/main/: AndroidManifest.xml
upload/eos-temp/Samples/Android/Login/app/src/main/cpp/: CMakeLists.txt
upload/eos-temp/Samples/Android/Login/app/src/main/java/com/epicgames/mobile/login/: MainActivity.java
upload/eos-temp/Samples/Android/Login/app/src/main/res/values/: strings.xml
